--- a/index.html
+++ b/index.html
@@ -650,8 +650,7 @@
       const uniq = Array.from(new Set(codes));
       try {
         const { data: emps } = await client
-          .from('employees')
-          .select('employee_code, full_name')
+          .from('employees').select('*')
           .in('employee_code', uniq)
           .limit(10000);
         const mp = new Map();
@@ -1011,7 +1010,7 @@
         absent_list_title: "รายชื่อไม่มาทำงาน (ไม่มี Check-in)",
         search_name: "ค้นหาชื่อ/รหัสพนักงาน",
         total_label: "รวม",
-        hide_table: "ซ่อนตาราง",
+        hide_table: "ซ่อนตาราง"
         opt_build_att: "สร้างสรุปการเข้างาน (attendance_days) อัตโนมัติ",
         late_cutoff: "เวลาเข้างานสายหลัง",
         upload_btn: "อัปโหลดเข้าสู่ระบบ",
@@ -1062,7 +1061,7 @@
         absent_list_title: "No attendance list (no check-in)",
         search_name: "Search name / code",
         total_label: "Total",
-        hide_table: "Hide table",
+        hide_table: "Hide table"
         opt_build_att: "Build attendance summary automatically",
         late_cutoff: "Late if after",
         upload_btn: "Upload",
@@ -1321,12 +1320,7 @@
       let minDate = null, maxDate = null;
 
       parsed.forEach(r => {
-        const base = {
-          employee_code: r.employee_code,
-          full_name: r.full_name || null,
-          department: r.department || null,
-          device_name: r.device || null
-        };
+        const base = { employee_code: r.employee_code, full_name: r.full_name || null, department: r.department || null };
         function push(direction, time){
           if (!time) return;
           const iso = r.dateISO + 'T' + time + ':00' + tzOffset;
