--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,7 @@
         absent_list_title: "รายชื่อไม่มาทำงาน (ไม่มี Check-in)",
         search_name: "ค้นหาชื่อ/รหัสพนักงาน",
         total_label: "รวม",
-        hide_table: "ซ่อนตาราง"
+        hide_table: "ซ่อนตาราง",
         opt_build_att: "สร้างสรุปการเข้างาน (attendance_days) อัตโนมัติ",
         late_cutoff: "เวลาเข้างานสายหลัง",
         upload_btn: "อัปโหลดเข้าสู่ระบบ",
@@ -1061,7 +1061,7 @@
         absent_list_title: "No attendance list (no check-in)",
         search_name: "Search name / code",
         total_label: "Total",
-        hide_table: "Hide table"
+        hide_table: "Hide table",
         opt_build_att: "Build attendance summary automatically",
         late_cutoff: "Late if after",
         upload_btn: "Upload",
